[project]
name = "shadow-market-intelligence-agent"
version = "0.1.0"
description = "A multi-agent competitor intelligence workflow built with Pydantic AI, OpenRouter, and Gradio."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "duckduckgo-search>=8.1.1",
    "gradio>=5.25.2",
    "httpx>=0.28.1",
    "pydantic>=2.11.3",
    "pydantic-ai-slim[anthropic,google,openai,openrouter]>=1.85.1",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.1.0",
    "reportlab>=4.4.0",
    "tenacity>=9.0",
    "trafilatura>=2.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
